--- a/app/src/Styles/dropdown.css
+++ b/app/src/Styles/dropdown.css
@@ -18,6 +18,9 @@
 	font-family: "Expletus Sans";
   font-size: 22px;
   color: rgb(130, 130, 130);
+	 -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 .monthMenuClass {
 	font-family: 'Expletus Sans';
