--- a/app/src/Styles/datePickerOverride.css
+++ b/app/src/Styles/datePickerOverride.css
@@ -3,4 +3,9 @@ z-index: 10000000!important;
 }
 .react-datepicker__input-container {
 display: flex;
+justify-content: center;
+}
+.datepicker-modal {
+position: fixed!important;
+background-color: rgba(0, 0, 0, 0.4)!important;
 }
