Implemented editUser feature; Improved Print Mode for Projects View; Stabilized Print Mode; Added Logged As..

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -5,3 +5,8 @@
 	font-family: 'Encode Sans Expanded',
 	sans-serif;
 }
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  /* color: red; */
+  opacity: 0.3; /* Firefox */
+}
