Adjusted datepicker location for small phones

--- a/app/src/Styles/datePickerOverride.css
+++ b/app/src/Styles/datePickerOverride.css
@@ -1,4 +1,5 @@
 .react-datepicker-popper {
+transform: translate3d(77px, -287px, 0px);
 z-index: 10000000!important;
 }
 .react-datepicker__input-container {
